Restructured css and js. Updated Readme.md

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
    <link rel="stylesheet" href="css/reset.css">
    <link rel="stylesheet" href="css/typography.css">
-   <link rel="stylesheet" href="css/page.css">
+   <link rel="stylesheet" href="css/page/page.css">
 
 </head>
 <body class='page'>
@@ -105,7 +105,7 @@
 
    </div> <!-- end page__inner -->
 
-   <script src="js/page.js"></script>
+   <script src="js/page/page.js"></script>
 
 </body> <!-- end page -->
 </html>
